deploy/aks-pro/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __KubernetesNamespace__
  namespace: __KubernetesNamespace__
spec:
  replicas: __replicas__
  selector:
    matchLabels:
      app: __KubernetesNamespace__
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: __maxSurge__
      maxUnavailable: __maxUnavailable__
  template:
    metadata:
      labels:
        app: __KubernetesNamespace__
    spec:
      tolerations:
        - key: "system-reserved"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "kube-system-only"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: __KubernetesNamespace__-nginx
          image: nginx:alpine
          imagePullPolicy: Always
          workingDir: /var/www
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: __KubernetesNamespace__
              mountPath: /var/www
            - name: __KubernetesNamespace__-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
        - name: __KubernetesNamespace__
          image: recordgo.azurecr.io/__KubernetesNamespace__-app:__Build.BuildId__
          imagePullPolicy: Always
          workingDir: /var/www
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: __KubernetesNamespace__-app-local-ini
              mountPath: /usr/local/etc/php/conf.d/local.ini
              subPath: local.ini
      restartPolicy: Always
      volumes:
        - name: __KubernetesNamespace__
          persistentVolumeClaim:
            claimName: __KubernetesNamespace__-shared-claim
        - name: __KubernetesNamespace__-nginx-conf
          configMap:
            name: __KubernetesNamespace__-nginx-conf
        - name: __KubernetesNamespace__-app-local-ini
          configMap:
            name: __KubernetesNamespace__-app-local-ini
