deploy/aks-pro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __KubernetesNamespace__
  namespace: __KubernetesNamespace__
spec:
  selector:
    app: __KubernetesNamespace__
  ports:
    - name: __KubernetesNamespace__-http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: __KubernetesNamespace__-https
      protocol: TCP
      port: 443
      targetPort: 443
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
